# claude-night-market

./: .cclsp.json  .feature-review.yaml  .gitignore  .linkcheckignore  .pre-commit-config.yaml  .pre-commit-hook-makefile-dogfood.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  STEWARDSHIP.md  conftest.py  pyproject.toml
plugins/abstract/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/abstract/.claude-plugin/: metadata.json  plugin.json
plugins/abstract/agents/: meta-architect.md  plugin-validator.md  skill-auditor.md  skill-evaluator.md  skill-improver.md
plugins/abstract/commands/: aggregate-logs.md  analyze-skill.md  context-report.md  create-command.md  create-hook.md  evaluate-skill.md  hooks-eval.md  improve-skills.md  make-dogfood.md  plugin-review.md  promote-discussions.md  rules-eval.md  skills-eval.md  validate-hook.md  validate-plugin.md
plugins/abstract/config/: abstract_config.yaml
plugins/abstract/data/: makefile_target_catalog.yaml  overlap_mappings.yaml
plugins/abstract/docs/: architecture-evolution.md  claude-code-compatibility.md  compatibility.md  frontmatter-exceptions.md  governance.md  makefile-dogfood.md  migration-guide.md  model-optimization-guide.md  multi-plugin-design.md  python-structure.md  skill-assurance-framework.md  skill-selection.md  wrapper-development-guide.md
plugins/abstract/examples/: test-skill-migration-example.md
plugins/abstract/hooks/: aggregate_learnings_daily.py  homeostatic_monitor.py  hooks-observability.json  hooks.json  post-evaluation.json  pre-skill-load.json  pre_skill_execution.py  skill_execution_logger.py
plugins/abstract/scripts/: README.md  __init__.py  abstract_validator.py  aggregate_skill_logs.py  auto_promote_learnings.py  cli_scaffold.py  compatibility_validator.py  compliance_checker.py  context_optimizer.py  generate_trust_badges.py  hook_validator.py  improvement_suggester.py  makefile_dogfooder.py  module_validator  post_learnings_to_discussions.py  promote_discussion_to_issue.py  rules_validator.py  skill_analyzer.py  skill_validator.py  skills_auditor.py  token_estimator.py  token_usage_tracker.py  tool_performance_analyzer.py  update_changelog.py  validate_budget.py  validate_plugin.py
plugins/abstract/shared-modules/: anti-rationalization.md  enforcement-language.md  iron-law-enforcement.md  iron-law-interlock.md  trigger-patterns.md
plugins/abstract/skills/: hook-scope-guide.md  validate-plugin-structure.md
plugins/abstract/tests/: README.md  __init__.py  conftest.py  test_base.py  test_compatibility_validator.py  test_errors.py  test_experience_library.py  test_frontmatter.py  test_hooks_homeostatic_monitor.py  test_hooks_pre_skill_execution.py  test_hooks_skill_execution_logger.py  test_improvement_queue.py  test_makefile_dogfooder.py  test_rollback_reviewer.py  test_script_permissions.py  test_skill_structure.py  test_skill_versioning.py  test_test_skill_wrapper.py  test_utils_token_analyzer.py  test_wrapper_infrastructure.py
plugins/archetypes/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/archetypes/.claude-plugin/: metadata.json  plugin.json
plugins/attune/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/attune/.claude-plugin/: metadata.json  plugin.json
plugins/attune/agents/: project-architect.md  project-implementer.md
plugins/attune/commands/: arch-init.md  blueprint.md  brainstorm.md  execute.md  mission.md  project-init.md  specify.md  upgrade-project.md  validate.md  war-room.md
plugins/attune/data/: architecture_templates.yaml  paradigm_decision_matrix.yaml  paradigm_trade_offs.yaml
plugins/attune/docs/: brainstorm-attune-plugin.md  full-cycle-workflow-guide.md  quick-start-example.md  tasks-integration.md
plugins/attune/examples/: architecture-aware-example.md  cli-tool-example.md  data-pipeline-example.md  library-example.md  microservices-example.md
plugins/attune/scripts/: architecture_researcher.py  attune_arch_init.py  attune_init.py  attune_upgrade.py  plugin_project_init.py  project_detector.py  sync_templates.py  tasks_manager.py  template_customizer.py  template_engine.py  template_loader.py  validate_project.py  version_fetcher.py
plugins/attune/templates/: TEMPLATE-GUIDE.md  agent-discoverability-template.md  command-discoverability-template.md  skill-discoverability-template.md
plugins/attune/tests/: TESTING.md  __init__.py  conftest.py  test_attune_init.py  test_attune_upgrade.py  test_integration.py  test_plugin_project_init.py  test_plugin_structure.py  test_project_detector.py  test_sync_templates.py  test_tasks_integration.py  test_template_engine.py  test_template_loader.py  test_validate_project.py  test_version_fetcher.py
plugins/conjure/: CHANGELOG.md  Makefile  README.md  openpackage.yml  pyproject.toml
plugins/conjure/.claude-plugin/: metadata.json  plugin.json
plugins/conjure/docs/: modularization-plan.md  quota-tracking.md
plugins/conjure/scripts/: delegation_executor.py  quota_tracker.py  usage_logger.py  war_room_orchestrator.py
plugins/conserve/: .pre-commit-config.yaml  Makefile  README.md  openpackage.yml  pyproject.toml
plugins/egregore/: Makefile  README.md  pyproject.toml
plugins/hookify/: .gitignore  CHANGELOG.md  Makefile  README.md  __init__.py  openpackage.yml  pyproject.toml
plugins/imbue/: .pre-commit-config.yaml  Makefile  README.md  openpackage.yml  pyproject.toml
plugins/leyline/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/memory-palace/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/minister/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/parseltongue/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/pensive/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/sanctum/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/scribe/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/scry/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/spec-kit/: .gitignore  Makefile  README.md  openpackage.yml  pyproject.toml
(+1136 files in other folders)
