[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attune-dev"
version = "1.6.5"
description = "Development tools for the attune Claude Code plugin - project initialization and workflow automation"
authors = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
maintainers = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/athola/claude-night-market"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "bandit>=1.7.9,<2.0",
    "blacken-docs>=1.16.0,<2.0",
    "interrogate>=1.7.0,<2.0",
    "pre-commit>=4.0.1,<5.0",
    "safety>=3.7.0,<4.0",
    "typos>=1.0.0",
    "ruff>=0.14.13",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.25.0",
    "pytest-bdd>=8.1.0",
    "pytest-xdist>=3.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", ".uv-cache", "__pycache__"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "S",   # flake8-bandit
  "PL",  # All Pylint rules
  "D",   # pydocstyle
]

extend-ignore = [
    "S101",   # Use of assert (acceptable in tests)
    "E203",   # whitespace before ':' (conflicts with ruff format)
    "D203",   # incorrect-blank-line-before-class
    "D213",   # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "D107"]
"tests/**/*.py" = [
    "S101",     # Allow asserts in tests
    "S108",     # Allow hardcoded temp paths in tests
    "PLC0415",  # Allow imports not at top (conditional test imports)
    "PLR2004",  # Allow magic values in tests
    "PLR0913",  # Allow too many arguments in test functions
    "PLR0915",  # Allow many statements in test functions
    "E501",     # Allow long lines in test docstrings
    "D212",     # Allow multi-line docstring on second line (BDD style)
    "D401",     # Allow non-imperative mood in test docstrings
    "D400",     # Allow first line not ending in period
    "D415",     # Allow first line not ending in period/question/exclamation
    "D205",     # Allow blank line after summary
]
"scripts/**/*.py" = [
    "S310",     # Allow URL open (validated with _validate_https_url)
    "E501",     # Allow long lines in template strings
    "D107",     # Allow missing __init__ docstrings
    "D401",     # Allow non-imperative mood
    "PLC0415",  # Allow conditional imports (avoid circular deps)
    "PLR0911",  # Allow many returns (decision trees)
    "PLR0912",  # Allow many branches (decision trees)
    "PLR0913",  # Allow many arguments (initialization functions)
    "PLR0915",  # Allow many statements (initialization functions)
    "PLR2004",  # Allow magic values
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
explicit_package_bases = true
namespace_packages = true
exclude = ['^\.venv', '^\.uv-cache', '^__pycache__']

[[tool.mypy.overrides]]
module = ["yaml", "abstract", "abstract.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", ".uv-cache", ".git", "__pycache__"]
skips = ["B101"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
    # Coverage threshold: 84% (lowered from 85% in PR #179)
    # Reason: New scripts (architecture_researcher.py, attune_arch_init.py, template_customizer.py)
    # are excluded from coverage per tool.coverage.run.omit - they use external APIs and are
    # tested manually. TODO: Restore to 85% when integration test mocks are added (#TBD)
    "--cov-fail-under=84",
    "--no-cov-on-fail"
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for workflow orchestration",
    "performance: Performance and scalability tests",
    "slow: Tests that take longer to execute",
    "bdd: Behavior-driven development style tests"
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "scripts/architecture_researcher.py",
    "scripts/attune_arch_init.py",
    "scripts/template_customizer.py",
]

[tool.coverage.report]
fail_under = 84
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
]
