[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conjure-dev"
version = "1.6.5"
description = "Development tools for the conjure Claude Code plugin - intelligent delegation framework for external LLM services"
authors = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
maintainers = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/athola/conjure"
requires-python = ">=3.12,<3.14"
dependencies = []

[project.optional-dependencies]
full = [
    "tiktoken>=0.7.0",  # Accurate token estimation (fallback: ~4 chars/token)
    "leyline>=1.0.0",   # Quota tracking (fallback: stub tracker)
]

[project.scripts]
quota-tracker = "scripts.quota_tracker:main"
usage-logger = "scripts.usage_logger:main"
delegator = "scripts.delegation_executor:main"

[dependency-groups]
dev = [
    "bandit>=1.7.9,<2.0",
    "blacken-docs>=1.16.0,<2.0",
    "interrogate>=1.7.0,<2.0",
    "pre-commit>=4.0.1,<5.0",
    "ty>=0.0.1a23",
    "safety>=3.7.0,<4.0",
    "typos>=1.0.0",
    "ruff>=0.14.13",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts", "hooks"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
extend-ignore = ["S101"]
# Rules: https://docs.astral.sh/ruff/rules/
# Using a subset of ruff-recommended rules plus some extras
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "S",   # flake8-bandit
  # Select specific PL rules, excluding PLR2004
  "PLC",  # Pylint conventions
  "PLE",  # Pylint errors
  "PLW",  # Pylint warnings
  "PLR",  # Pylint refactor (but exclude PLR2004 below)
  "D",   # pydocstyle
]

ignore = [
    "E203",    # whitespace before ':' (conflicts with black/ruff format)
    "D203",    # incorrect-blank-line-before-class (incompatible with D211)
    "D213",    # multi-line-summary-second-line (incompatible with D212)
    "PLR2004", # magic-value-comparison (too many in test files)
    # Type annotation rules (too many for this task)
    "ANN001",  # missing-type-function-argument
    "ANN002",  # missing-type-argument
    "ANN003",  # missing-type-keyword
    "ANN201",  # missing-return-type-undocumented-public-function
    "ANN202",  # missing-return-type-private-function
    "ANN204",  # missing-return-type-special-method
    "ANN205",  # missing-return-type-static-method
    "ANN206",  # missing-return-type-class-method
    "ANN401",  # any-type
    # Other rules to ignore for this task
    "ARG002",  # unused-method-argument
    "BLE001",  # blind-except
    "INP001",  # implicit-namespace-package
    "DTZ005",  # call-datetime-now-without-tzinfo
    "PERF401", # manual-list-comprehension
    "PTH123",  # builtin-open
    "TRY002",  # raise-vanilla-class
    "TRY003",  # raise-vanilla-args
    "UP041",   # timeout-error-alias
]

[tool.uv.sources]
leyline = { path = "../leyline" }

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**" = ["PLR2004"]      # Allow magic numbers in tests
"test_*.py" = ["PLR2004"]     # Allow magic numbers in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
explicit_package_bases = true
namespace_packages = true
exclude = ['^\.venv', '^\.uv-cache', '^fix_.*\.py$']

[[tool.mypy.overrides]]
module = ["tiktoken", "tiktoken.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["leyline", "leyline.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", ".uv-cache", ".git", "__pycache__"]
skips = ["B101"]  # Skip assert_used test for test files

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for workflow orchestration",
    "slow: Slow running tests",
    "bdd: BDD-style behavior-driven tests",
]
