[project]
name = "imbue-dev"
version = "1.6.5"
description = "Development tools for the imbue Claude Code plugin - review workflow and evidence management"
authors = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
maintainers = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/athola/imbue"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.13,<1.0",
    "mypy>=1.11.0,<2.0",
    "ty>=0.0.1a23",
    "pytype>=2024.10.11 ; python_version >= '3.10'",
    "typos>=1.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.7.9,<2.0",
    "blacken-docs>=1.16.0,<2.0",
    "interrogate>=1.7.0,<2.0",
    "pre-commit>=4.0.1,<5.0",
    "ty>=0.0.1a23",
    "safety>=3.7.0,<4.0",
    "typos>=1.0.0",
    "ruff>=0.14.13",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.25.0",
    "pytest-bdd>=7.0.0",
    "pytest-xdist>=3.6.1",
    "psutil>=5.9.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", ".pre-commit"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "S",   # flake8-bandit
  "PL",  # All Pylint rules (complete coverage)
  "D",   # pydocstyle
]

extend-ignore = [
    "S101",   # Use of assert (acceptable)
    "E203",    # whitespace before ':' (conflicts with black/ruff format)
    "D203",    # incorrect-blank-line-before-class (incompatible with D211)
    "D213",    # multi-line-summary-second-line (incompatible with D212)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**" = [
    "D103",  # Missing docstrings in tests
    "E501",  # Long test lines are acceptable
    "PLR2004",  # Magic values in tests
    "PLR0915",  # Complex test flows
    "S603",  # Subprocess usage in test fixtures
    "S608",  # SQL strings in test data
    "B007",  # Unused loop variables in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
explicit_package_bases = true
namespace_packages = true
exclude = ['^\.venv', '^\.uv-cache', '^fix_.*\.py$']

[tool.bandit]
exclude_dirs = [".venv", ".uv-cache", ".git", "__pycache__"]
skips = ["B101"]  # Skip assert_used test for test files

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--no-cov-on-fail",
    "--tb=short",
    "--durations=10"
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for workflow orchestration",
    "performance: Performance and scalability tests",
    "slow: Slow running tests (use with -m slow)",
    "bdd: Behavior-driven development style tests"
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["scripts", "hooks"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
skip_covered = false
fail_under = 85

[tool.coverage.html]
directory = "htmlcov"
