[project]
name = "leyline"
version = "1.6.5"
description = "Infrastructure and pipeline building blocks for Claude Code plugins"
authors = [{name = "Claude Night Market"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
tokens = [
    "tiktoken>=0.5.0",  # Accurate token estimation (fallback: ~4 chars/token)
]
dev = [
    "ruff>=0.14.13",
    "mypy>=1.11.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leyline"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "PL", "D"]
extend-ignore = [
    "S101",   # Use of assert (acceptable)
    "E203",   # Whitespace before ':'
    "D203",   # One blank line before class docstring
    "D213",   # Multi-line docstring summary should start at second line
    "D107",   # Missing docstring in __init__ (class docstring sufficient)
    "PLR0913",  # Too many arguments
    "S603",   # subprocess untrusted input (acceptable for CLI tools)
    "S607",   # subprocess partial path (acceptable for CLI tools)
]

[tool.ruff.lint.per-file-ignores]
"tests/test_auto_star_repo.py" = ["D101", "D102", "D103", "D205", "D212", "D400", "D415", "E501", "PLC0415"]
"tests/test_manifest_consistency.py" = ["D101", "D102", "D103", "D205", "D212", "D400", "D415", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
mypy_path = ["src", "scripts"]

[[tool.mypy.overrides]]
module = ["tiktoken"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=leyline --cov-report=term-missing --strict-markers"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for workflow orchestration",
    "bdd: Behavior-driven development style tests",
]

[tool.coverage.run]
source = ["src/leyline"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
